# champ

./: README.md  local_passkey  local_passkey.pub
champ_bringup/launch/: bringup.launch.py  joints_gui.launch.py
champ_config/config/: robot_dog.rviz
champ_config/launch/: bringup.launch.py  gazebo_gen.launch.py
champ_description/launch/: description.launch.py
champ_description/rviz/: urdf_viewer.rviz
champ_description/urdf/: asus_camera.urdf.xacro  champ.urdf
champ_navigation/: CMakeLists.txt  README.md
champ_navigation/src/: controller.cpp  path_planner.cpp  point_cloud_processing.cpp  tf_publisher.cpp
